--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@aspnet/signalr-client": "^1.0.0-alpha2-final",
     "core-js": "^2.5.2",
     "rxjs": "^5.5.5",
     "ts-helpers": "^1.1.2",
